# special-folders

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
include/hao/special_folders/: special_folders.h
source/: special_folders_linux.cpp  special_folders_mac.mm  special_folders_win32.cpp
